2007-05-03  Levi Pearson <lpearson@lnxi.com>

	* bmc-config/src/bmc-serial-conf-section.c
	(connect_mode_checkout): Fix strdup bug.
	
2007-05-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-kcs-api.c, libfreeipmi/src/ipmi-ssif-api.c,
	libfreeipmi/include/freeipmi/ipmi-kcs-api.h,
	libfreeipmi/include/freeipmi/ipmi-ssif-api.h: Include/fix error
	return conditions.  Add new error codes.
	
2007-05-02  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring.c: Change default output.

2007-04-30  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Don't bother to obscure ipmipower error messages.

2007-04-29  Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower.8.in: Fix text.

	* ipmiconsole/ipmiconsole.8.in: Fix some text.

	* ipmimonitoring/src/libipmimonitoring/libipmimonitoring.c
	(ipmi_monitoring_bitmask_string): Fix corner case.

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(_ipmimonitoring): Fix corner case.  Output strings for bitmask
	readings.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring.h: Fix
	bitmask values.  Don't know what I was doing before.
	
2007-04-28  Albert Chu <chu11@llnl.gov>

	* doc/: Remove a whole bunch of unnecessary stuff.

	* freeipmi.spec.in, configure.ac: Adjust appropriately.

	* ipmi-raw/: Parse '0x' in hex codes too.  Fix seg-fault corner
	case.

	* common/src/pstdout.c (_pstdout_output_buffer_data,
	_pstdout_output_finish): Alter default output of buffered
	hostrange output.

	* bmc-info/, ipmi-raw/, ipmi-sel/, ipmi-sensors/, ipmimonitoring/:
	Alter default output of buffered hostrange output.

	* ipmipower/: Remove -o option.  Change -C option to -X
	option. Add -C option for consolidated output like other tools.
	Add -E option to eliminate undetected nodes. Fix conf file
	inconsistencies.

	* ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache.c
	(ipmi_sdr_cache_open): Fix errno corner case.

	* ipmi-sensors/: Add -q option.

	* docs/: Various minor cleanup and wording fixes.
	